Changed the global font to Poppins, rounded the corners of buttons, added animation to the sign in button. Fixed arrangement of the nav right side to be center aligned

--- a/stylesfolder/main.css
+++ b/stylesfolder/main.css
@@ -1,3 +1,7 @@
+* {
+    font-family: Poppins, sans-serif !important;
+}
+
 body {
     width: 100%;
     height: auto;
@@ -42,6 +46,22 @@ a:hover {
     border: 1px solid #1b6df0;
     height: 30px;
     width: 100px;
+    cursor: pointer;
+    border-radius: 50px;
+    
+}
+
+#bluebutton:hover {
+    animation-name: buttonhover;
+    animation-duration: 0.2s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes buttonhover {
+    100% {
+        box-shadow: 0px 0px 3px 2px #1b6df0;
+    }
 }
 
 #right-list,
@@ -49,6 +69,7 @@ a:hover {
     margin-top: 15px;
     margin-left: 15px;
     margin-right: 15px;
+    align-items: center;
 }
 
 #central-container {
@@ -75,6 +96,10 @@ input {
     align-items: center;
 }
 
+#searchbar:focus {
+    box-shadow: 0px 0px 3px 3px lightgray;
+}
+
 .smaller {
     color: rgba(143, 136, 136, 0);
     height: 27px;
@@ -93,7 +118,8 @@ input {
     height: 40px;
     border: none;
     padding: 10px;
-    color: #6f6969
+    color: #6f6969;
+    border-radius: 50px;
 }
 
 #alterbuttons {
